packages/yew-macro/tests/function_component_attr/bad-name-fail.stderr
error: expected identifier
 --> tests/function_component_attr/bad-name-fail.rs:8:22
  |
8 | #[function_component(let)]
  |                      ^^^

error: unexpected token
  --> tests/function_component_attr/bad-name-fail.rs:17:23
   |
17 | #[function_component(x, y, z)]
   |                       ^

error: expected identifier
  --> tests/function_component_attr/bad-name-fail.rs:26:22
   |
26 | #[function_component(124)]
   |                      ^^^

warning: type `component` should have an upper camel case name
  --> tests/function_component_attr/bad-name-fail.rs:35:22
   |
35 | #[function_component(component)]
   |                      ^^^^^^^^^ help: convert the identifier to upper camel case (notice the capitalization): `Component`
   |
   = note: `#[warn(non_camel_case_types)]` on by default
